# syt-verteiltesSystem

./: 002_implementation.py  README.md  setup.cfg
protocol/: __init__.py  main.py  protocol.py
tests/: test_001_protocol.py
