[metadata]
name = TLV-Protocol
author = Jan Wimmer, Raul Mititelu
description = De- and Encoder for our Distributed System
version = 1.0.0
url = https://github.com

[options]
python_requires >= 3.8
packages = find:
zip_safe = False
install_requires =
    pytest

[flake8]
max-line-length=99
exclude = venv
docstring-convention = numpy

[tool:pytest]
testpaths = tests
log_level = info